Fixing button spacing

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ h1 {
     display: block;
     width: 100%;
     border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 .softedges {
